docs-archive/apache-airflow-providers-amazon/9.20.0/_sources/_api/airflow/providers/amazon/aws/triggers/ssm/index.rst.txt
airflow.providers.amazon.aws.triggers.ssm
=========================================

.. py:module:: airflow.providers.amazon.aws.triggers.ssm


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.ssm.SsmRunCommandTrigger


Module Contents
---------------

.. py:class:: SsmRunCommandTrigger(*, command_id, waiter_delay = 120, waiter_max_attempts = 75, fail_on_nonzero_exit = True, aws_conn_id = None, region_name = None, verify = None, botocore_config = None)

   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`


   Trigger when a SSM run command is complete.

   :param command_id: The ID of the AWS SSM Run Command.
   :param waiter_delay: The amount of time in seconds to wait between attempts. (default: 120)
   :param waiter_max_attempts: The maximum number of attempts to be made. (default: 75)
   :param fail_on_nonzero_exit: If True (default), the trigger will fail when the command returns
       a non-zero exit code. If False, the trigger will complete successfully regardless of the
       command exit code. (default: True)
   :param aws_conn_id: The Airflow connection used for AWS credentials.
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: command_id


   .. py:attribute:: fail_on_nonzero_exit
      :value: True



   .. py:method:: hook()

      Override in subclasses to return the right hook.



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



